objects/Apex_Sharing_Entity__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Sharing_Rule__c</fullName>
        <label>Apex Sharing Rule</label>
        <referenceTo>Apex_Sharing_Rule__mdt</referenceTo>
        <relationshipLabel>Apex Sharing Entities</relationshipLabel>
        <relationshipName>Apex_Sharing_Entities</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Name_of_Entity__c</fullName>
        <label>Name of Entity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_Cause__c</fullName>
        <description>Only set if you have defined a specific Apex Sharing Reason on a Custom Object - Otherwise, it will cause errors.</description>
        <inlineHelpText>Only set if you have defined a specific Apex Sharing Reason on a Custom Object - Otherwise, it will cause errors.</inlineHelpText>
        <label>Sharing Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity__c</fullName>
        <label>Type of Entity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Public Group</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Apex Sharing Entity</label>
    <listViews>
        <fullName>All_Main</fullName>
        <columns>MasterLabel</columns>
        <columns>Name_of_Entity__c</columns>
        <columns>Type_of_Entity__c</columns>
        <columns>Apex_Sharing_Rule__c</columns>
        <columns>Active__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Sharing_Cause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Main)</label>
    </listViews>
    <pluralLabel>Apex Sharing Entities</pluralLabel>
</CustomObject>